Feature: Add MinAge rule
